--- a/Lab7_TFracEditor/UnitTest1/UnitTest1.vcxproj
+++ b/Lab7_TFracEditor/UnitTest1/UnitTest1.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{266AC2BA-BA72-4FB1-B4F9-7D0F97937636}</ProjectGuid>
+    <ProjectGuid>{332ED0B1-D447-4E49-979B-EC78A1592E20}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>UnitTest1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TFracEditor_test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -162,11 +163,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="unittest1.cpp" />
+    <ClCompile Include="TFracEditor_test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\STP7\STP7.vcxproj">
-      <Project>{2e0b6d2b-ce65-4154-ba82-b017c5a279da}</Project>
+      <Project>{431f02f6-8a52-4b44-ac7d-d157292d62ff}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
